Fix pointer not showing while hover over like icon

--- a/frontend/src/styles/Post.module.css
+++ b/frontend/src/styles/Post.module.css
@@ -78,6 +78,7 @@
 
 .PostCard i:hover {
   color: white;
+  cursor: pointer;
 }
 
 .CommentCard {
